--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -16,6 +16,8 @@ button {
     border: none;
     color: $color-dark;
     background-color: inherit;
+    padding: 0;
+    margin: auto;
 }
 
 .active {
