--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -13,14 +13,11 @@
 }
 
 button {
-    border: none;
+    border: 0;
     color: $color-dark;
     background-color: inherit;
-    padding: 0;
-    margin: auto;
 }
 
-.active {
-    color: yellow;
-
+.isActive {
+    color: #e1b12c;
 }
